--- a/index.html
+++ b/index.html
@@ -147,6 +147,18 @@
         .footer ul .mobile{display: none;}
         .footer h4{padding: 36px 20px; font-size: 10px;}
     }
+    @media only screen and (min-width:425px) and (max-width:768px){
+        .main .content .about{padding-left: 130px; padding-top: 110px;}
+        .main .content .about img{display: none;}
+        .main .content .about ul{padding-left: 120px;}
+        .main .content .buttons{margin-top: 50px;}
+    }
+    @media only screen and (min-width:370px) and (max-width:375px){
+        .footer ul{padding-left: 115px;}
+    }
+    @media only screen and (min-width:355px) and (max-width:360px){
+        .footer ul{padding-left: 110px;}
+    }
 </style>
 </head>
 <body>
@@ -160,8 +172,7 @@
 
     <div class="main">
         <div class="video">
-            <a href="#"><img class="play" src="images/play.svg"></a>
-            <img class="source" src="http://lorempixel.com/1920/1920">
+            <iframe class="source" src="https://www.youtube.com/embed/_9ZAeT3M4kg" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="content">
@@ -179,7 +190,7 @@
         <div style="display: block;">
             <div class="buttons">
                 <a href="images/TRTWORLD_OBJECTIVES.pdf"><img class="details" src="images/details.svg"></a>
-                <a href="#"><img class="apply" src="images/apply.svg"></a>
+                <a href="http://jobs.trtworld.com/PositionDetail.aspx?id=I00890&rec=10098&title=FELLOWSHIP%20PROGRAM"><img class="apply" src="images/apply.svg"></a>
             </div>
         </div>
         </div>
